--- a/index.html
+++ b/index.html
@@ -99,8 +99,40 @@ document.write(`
     const head = {x: snake[0].x + dir.x, y: snake[0].y + dir.y};
 
     // wrap-around (optional). Use wrap; if you want wall collision, change to gameOver on out-of-bounds.
-    head.x = (head.x + COLS) % COLS;
-    head.y = (head.y + ROWS) % ROWS;
+    function tick() {
+  // apply buffered direction change (prevents 180-turn)
+  if ((nextDir.x !== -dir.x || nextDir.y !== -dir.y) || snake.length===1) dir = nextDir;
+
+  const head = {x: snake[0].x + dir.x, y: snake[0].y + dir.y};
+
+  // wall collision check
+  if (head.x < 0 || head.x >= COLS || head.y < 0 || head.y >= ROWS) {
+    gameOver();
+    draw();
+    return;
+  }
+
+  // collision with self?
+  if (snake.some(s => s.x===head.x && s.y===head.y)) { 
+    gameOver(); 
+    draw(); 
+    return; 
+  }
+
+  snake.unshift(head);
+
+  // eat food?
+  if (head.x===food.x && head.y===food.y) {
+    score += 1;
+    scoreEl.textContent = score;
+    placeFood();
+  } else {
+    snake.pop();
+  }
+
+  draw();
+}
+
 
     // collision with self?
     if (snake.some(s => s.x===head.x && s.y===head.y)) { gameOver(); draw(); return; }
