--- a/fighting.html
+++ b/fighting.html
@@ -1,4 +1,3 @@
-document.write(`
 <!doctype html>
 <html>
 <head>
@@ -18,7 +17,7 @@ document.write(`
 
 <div class="menu" id="menu">
   <button id="startBtn">Start Game</button>
-  <button id="casesBtn">Open Case</button>
+  <button id="casesBtn">Open Case (50 Points)</button>
   <div class="points" id="pointsDisplay">Points: 0</div>
   <div class="points" id="skinDisplay">Current Skin: White</div>
 </div>
@@ -88,10 +87,8 @@ function tick(){
   if((nextDir.x!==-dir.x||nextDir.y!==-dir.y)||snake.length===1) dir=nextDir;
   const head={x:snake[0].x+dir.x,y:snake[0].y+dir.y,color:snake[0].color};
 
-  // wrap
-  head.x=(head.x+COLS)%COLS;
-  head.y=(head.y+ROWS)%ROWS;
-
+  // WALL COLLISIONS
+  if(head.x<0||head.x>=COLS||head.y<0||head.y>=ROWS){ gameOver(); return; }
   if(snake.some(s=>s.x===head.x&&s.y===head.y)&&!invincible){ gameOver(); return; }
   if(obstacles.some(o=>o.x===head.x&&o.y===head.y)&&!invincible){ gameOver(); return; }
 
@@ -133,12 +130,14 @@ window.addEventListener('keydown',(e)=>{
   else if(k==='ArrowDown'||k==='s'||k==='S') nextDir={x:0,y:1};
   else if(k==='ArrowLeft'||k==='a'||k==='A') nextDir={x:-1,y:0};
   else if(k==='ArrowRight'||k==='d'||k==='D') nextDir={x:1,y:0};
-  else if(k===' '){ e.preventDefault(); if(running){} }
 });
 
 canvas.addEventListener('click',()=>{ canvas.focus(); });
 
-function updatePoints(){ pointsDisplay.textContent='Points: '+points; skinDisplay.textContent='Current Skin: '+currentSkin; }
+function updatePoints(){ 
+  pointsDisplay.textContent='Points: '+points; 
+  skinDisplay.textContent='Current Skin: '+currentSkin; 
+}
 
 startBtn.addEventListener('click',()=>{
   menu.style.display='none';
@@ -148,7 +147,6 @@ startBtn.addEventListener('click',()=>{
 casesBtn.addEventListener('click',()=>{
   if(points<50){ alert("Not enough points! Each case costs 50."); return; }
   points-=50;
-  updatePoints();
   const roll=Math.random();
   let newSkin;
   if(roll<0.6) newSkin=colors[Math.floor(Math.random()*colors.length)];
@@ -159,10 +157,10 @@ casesBtn.addEventListener('click',()=>{
   alert("You got a new skin: "+newSkin);
   updatePoints();
 });
+
 updatePoints();
 
 })();
 </script>
 </body>
 </html>
-`);
