--- a/fighting.html
+++ b/fighting.html
@@ -17,7 +17,7 @@
 
 <div class="menu" id="menu">
   <button id="startBtn">Start Game</button>
-  <button id="casesBtn">Open Case (50 Points)</button>
+  <button id="casesBtn">Open Case</button>
   <div class="points" id="pointsDisplay">Points: 0</div>
   <div class="points" id="skinDisplay">Current Skin: White</div>
 </div>
@@ -80,15 +80,18 @@ function gameOver(){
   ctx.fillStyle='rgba(255,255,255,0.1)';
   ctx.fillRect(0,0,canvas.width,canvas.height);
   menu.style.display='flex';
-  points+=score; updatePoints();
+  points += score; 
+  updatePoints();
 }
 
 function tick(){
   if((nextDir.x!==-dir.x||nextDir.y!==-dir.y)||snake.length===1) dir=nextDir;
   const head={x:snake[0].x+dir.x,y:snake[0].y+dir.y,color:snake[0].color};
 
-  // WALL COLLISIONS
-  if(head.x<0||head.x>=COLS||head.y<0||head.y>=ROWS){ gameOver(); return; }
+  // wrap
+  head.x=(head.x+COLS)%COLS;
+  head.y=(head.y+ROWS)%ROWS;
+
   if(snake.some(s=>s.x===head.x&&s.y===head.y)&&!invincible){ gameOver(); return; }
   if(obstacles.some(o=>o.x===head.x&&o.y===head.y)&&!invincible){ gameOver(); return; }
 
@@ -96,11 +99,19 @@ function tick(){
 
   if(food.moving){ food.x+=food.dir; if(food.x<0||food.x>=COLS) food.dir*=-1; }
 
-  if(head.x===food.x&&head.y===food.y){
-    if(head.color===food.color){ score+=10; snake[0].color=food.color; }
-    else{ score=Math.max(0,score-5); snake.pop(); }
-    if(Math.random()<0.1){ invincible=true; invTimer=50; }
+  if(head.x===food.x && head.y===food.y){
+    if(head.color===food.color){
+      score += 10; 
+      points += 10;                // gain points on correct food
+      snake[0].color = food.color;
+    } else { 
+      score = Math.max(0,score-5); 
+      points = Math.max(0,points-5); // lose points on wrong food
+      snake.pop(); 
+    }
+    if(Math.random() < 0.1){ invincible = true; invTimer = 50; }
     placeFood();
+    updatePoints();
   } else snake.pop();
 
   if(invincible){ invTimer--; if(invTimer<=0) invincible=false; }
@@ -110,17 +121,26 @@ function tick(){
 function draw(){
   ctx.fillStyle='#000'; ctx.fillRect(0,0,canvas.width,canvas.height);
 
+  // obstacles
   ctx.fillStyle='#555';
   obstacles.forEach(o=>ctx.fillRect(o.x*CELL+2,o.y*CELL+2,CELL-4,CELL-4));
 
+  // food
   ctx.fillStyle=invincible?'gold':food.color;
   ctx.fillRect(food.x*CELL+2,food.y*CELL+2,CELL-4,CELL-4);
 
+  // snake
   for(let i=0;i<snake.length;i++){
     const s=snake[i];
     ctx.fillStyle=i===0?currentSkin:`rgb(${220-i*10},${220-i*10},${220-i*10})`;
     ctx.fillRect(s.x*CELL+1,s.y*CELL+1,CELL-2,CELL-2);
   }
+
+  // points overlay
+  ctx.fillStyle='white';
+  ctx.font='16px Arial';
+  ctx.fillText('Points: '+points,10,20);
+  ctx.fillText('Skin: '+currentSkin,10,40);
 }
 
 window.addEventListener('keydown',(e)=>{
@@ -130,6 +150,7 @@ window.addEventListener('keydown',(e)=>{
   else if(k==='ArrowDown'||k==='s'||k==='S') nextDir={x:0,y:1};
   else if(k==='ArrowLeft'||k==='a'||k==='A') nextDir={x:-1,y:0};
   else if(k==='ArrowRight'||k==='d'||k==='D') nextDir={x:1,y:0};
+  else if(k===' '){ e.preventDefault(); if(running){} }
 });
 
 canvas.addEventListener('click',()=>{ canvas.focus(); });
@@ -145,8 +166,9 @@ startBtn.addEventListener('click',()=>{
 });
 
 casesBtn.addEventListener('click',()=>{
-  if(points<50){ alert("Not enough points! Each case costs 50."); return; }
-  points-=50;
+  if(points<5){ alert("Not enough points! Each case costs 5."); return; }
+  points-=5;
+  updatePoints();
   const roll=Math.random();
   let newSkin;
   if(roll<0.6) newSkin=colors[Math.floor(Math.random()*colors.length)];
@@ -159,7 +181,6 @@ casesBtn.addEventListener('click',()=>{
 });
 
 updatePoints();
-
 })();
 </script>
 </body>
